<resources>
    <string name="app_name">encharet</string>
    <string name="login">Login</string>
    <string name="name">userName</string>
    <string name="pswd">Password</string>

    <string name="sign">Signup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pno">phonenumber</string>
    <string name="ad">address</string>
    <string name="cpas">confirmpassword</string>
    <string name="rega">Registeration</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="tab_text_1">Posts</string>
    <string name="tab_text_2">Your Bids</string>
    <string name="tab_text_3">Your Posts</string>
    <string name="tab_text_4">Status</string>

</resources>
